css/header_sidebar.css
* {
    box-sizing: border-box;
    scroll-behavior: smooth;
    padding: 0;
    margin: 0;
    font-family: 'inter';
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 96px;
    top: 0;
    padding-top: 20px;
    padding-right: 40px;
    padding-bottom: 20px;
    padding-left: 348px;
    z-index: 4;
    max-height: 1080px;
    max-width: 1920px;
}

.max-width-header {
    width: 100%;
    background-color: white;
    z-index: 12;
    position: fixed;
    top: 0;
    height: 96px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
}

header h1 {
    font-weight: 400;
    font-size: 20px;
}

.header-icons-container {
    display: flex;
    align-items: center;
    width: 104px;
    height: 56px;
    padding-right: 50px;
    gap: 16px;
    transition: transform 0.3s ease-in-out;
}

.header-icons-container img:hover {
    transform: scale(1.2);
}

.user-profile-container {
    display: flex;
}

.user-profile-menu {
    position: fixed;
    z-index: 999;
    top: 80px;
    right: 80px;
    width: 160px;
    height: 158px;
    border-radius: 20px 0px 20px 20px;
    background-color: rgba(42, 54, 71, 1);
}

.help-html-display-none {
    display: none;
}

.user-profile-content {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 8px;
    padding: 10px;
}

.user-profile-content a {
    text-decoration: none;
    color: rgba(168, 168, 168, 1);
    font-weight: 400;
    font-size: 16px;
    padding: 8px 16px;
    border-radius: 8px;
}

.user-profile-content a:hover {
    background-color: rgba(9, 25, 49, 1);
    color: white;
}

.user-profile {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    width: 56px;
    height: 56px;
    border: 3px solid rgba(42, 54, 71, 1);
    border-radius: 100%;
    transition: box-shadow 0.2s ease-in-out;
}

.user-profile:hover {
    background-color: #E2E6EC;
}

.user-profile-font {
    font-weight: bold;
    color: rgba(41, 171, 226, 1);
}

.sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 232px;
    height: 100%;
    background-color: rgba(42, 54, 71, 1);
    position: fixed;
    top: 0;
    padding-top: 64px;
    padding-bottom: 64px;
    z-index: 8;
    max-width: 1920px;
    max-height: 1080px;
}

.sidebar-max-background {
    width: 232px;
    height: 100%;
    background-color: rgba(42, 54, 71, 1);
    position: fixed;
    top: 0;
    z-index: 14;
    max-width: 1920px;
}

.nav-links {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    list-style: none;
    color: rgba(168, 168, 168, 1);
    gap: 15px;
    max-height: 100px;
    z-index: 5;
}

.nav-links a:hover {
    background-color: rgba(9, 25, 49, 1);
    color: white;
}

.nav-links a {
    text-decoration: none;
    color: rgba(168, 168, 168, 1);
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-weight: 400;
    font-size: 16px;
    cursor: pointer;
    padding-top: 8px;
    padding-right: 56px;
    padding-bottom: 8px;
    padding-left: 56px;
    width: 232px;
}

.nav-links li {
    list-style: none;
}

.nav-links a:hover img {
    filter: brightness(0) invert(1);
}

.nav-links img {
    margin-right: 10px;
}

.sidebar-join-logo {
    margin-bottom: 100px;
}

.sidebar-join-logo-alternative {
    margin-bottom: 0px;
}

footer {
    display: flex;
    flex-direction: column;
    width: 100%;
    color: rgba(168, 168, 168, 1);
    padding-top: 243px;
    gap: 8px;
    font-size: 16px;
    font-weight: 400;
}

footer a {
    text-decoration: none;
    color: rgba(168, 168, 168, 1);
    display: flex;
    cursor: pointer;
    width: 100%;
    padding: 8px;
}

footer a:hover {
    color: white;
    background-color: rgba(9, 25, 49, 1);
}

.header-logo-div-mobile {
    display: none;
}

.privacy-policy-padding {
    padding-left: 55px;
}

.legal-notice-padding {
    padding-left: 55px;
}

.max-width-header-container-index {
    background-color: white;
    position: fixed;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
    width: 100%;
    height: 96px;
}

.sidebar-max-width-container-index {
    background-color: rgba(42, 54, 71, 1);
    width: 232px;
    height: 100%;
    position: fixed;
    top: 0;
    z-index: 0;
}

.link-padding-alternative {
    padding-left: 55px;
}

@media screen and (min-width: 1921px) and (min-height: 1081px) {
    .user-profile-menu {
        position: absolute;
        z-index: 999;
        top: 80px;
        width: 160px;
        height: 158px;
        border-radius: 20px 0px 20px 20px;
        background-color: rgba(42, 54, 71, 1);
        left: 1680px;
    }

    .Summary-Box-Z-Index-Container {
        margin-top: 0px;
    }
}

@media screen and (max-width: 1399px) {

    .sidebar {
        width: 200px;
    }

    .sidebar-max-background {
        width: 200px;
    }

    .nav-links a {
        padding-left: 40px;
        width: 200px;
        white-space: nowrap;
    }

    footer a {
        padding-left: 40px;
    }
}

@media screen and (max-width: 1023px) {

    .sidebar-join-logo-alternative {
        margin-bottom: 0px;
        display: none;
    }

    .nav-links li:hover {
        background-color: rgba(9, 25, 49, 1);
        color: white;
        border-radius: 16px;
        gap: 20px;
        margin-top: 15px;
        margin-bottom: 15px;
    }

    .sidebar {
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        width: 100%;
        height: 100px;
        position: fixed;
        bottom: 0;
        left: 0;
        top: auto;
        padding: 0;
        z-index: 11;
    }

    .sidebar-max-background {
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        width: 100%;
        height: 100px;
        position: fixed;
        bottom: 0;
        left: 0;
        top: auto;
        padding: 0;
        z-index: 14;
    }

    .sidebar-join-logo {
        display: none;
    }

    footer {
        display: none;
    }

    .nav-links {
        display: flex;
        justify-content: space-around;
        align-items: center;
        flex-direction: row;
        white-space: nowrap;
        height: 100%;
        width: 100%;
        gap: 15px;
        padding: 66px 16px;
        z-index: 999;
    }

    .nav-links li {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: 100%;
        padding: 0px;
        border-radius: 16px;
        height: 80px;
        width: 80px;
    }

    .nav-links a {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center;
        height: 70%;
        width: 70%;
        padding-left: 56px;
    }

    .nav-links a:hover {
        background-color: rgba(9, 25, 49, 1);
        color: white;
        width: 90px;
        height: 90px;
        border-radius: 16px;
    }

    .nav-links img {
        margin-right: 0px;
    }

    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100vw;
        height: 96px;
        top: 0;
        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
        padding-top: 20px;
        padding-bottom: 20px;
        padding-right: 40px;
        padding-left: 20px;
        background-color: white;
    }

    .header-logo-div-mobile {
        display: flex;
    }

    .header-logo-mobile {
        height: 56px;
        width: 56px;
    }

    .header-icons-container {
        display: flex;
        align-items: center;
        height: 56px;
        gap: 16px;
        width: 40px;
        transition: transform 0.3s ease-in-out;
    }

    .help-html-display-none {
        display: block;
    }

    .user-profile-menu {
        position: fixed;
        z-index: 15;
        top: 80px;
        right: 80px;
        width: 160px;
        height: 200px;
        border-radius: 20px 0px 20px 20px;
        background-color: rgba(42, 54, 71, 1);
    }
}


@media screen and (max-width: 800px) {
    .nav-links {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 10px;
    }

    .nav-links li {
        width: 80px;
        height: 76px;
    }

    .nav-links a {
        display: flex;
        gap: 6px;
    }

    .nav-links a:hover {
        background-color: transparent;
        color: inherit;
    }

    .nav-links span {
        font-size: 16px;
    }
}

@media screen and (max-width: 500px) {
    header {
        padding: 20px 16px;
    }

    .sidebar {
        height: 80px;
        bottom: 0;
        left: 0;
        width: 100%;
        padding: 0;
        box-sizing: border-box;
        margin-bottom: -2px;
        margin-right: -5px;
    }

    .sidebar-max-background {
        height: 80px;
        bottom: 0;
        left: 0;
        width: 100%;
        padding: 0;
        box-sizing: border-box;
        margin-bottom: -2px;
        margin-right: -5px;
    }

    .nav-links {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 80px;
        width: 100%;
    }


    .nav-links li {
        flex: 1 1 0;
        min-width: 0;
        height: 76px;
        width: 80px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 16px;
    }

    .nav-links li:hover {
        width: 80px;
        height: 76px;
    }

    .nav-links a {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: auto;
        padding: 1px;
        margin: 0;
        font-size: 14px;
        line-height: 1;
        box-sizing: border-box;
        gap: 4px;
    }

    .nav-links a:hover {
        background-color: transparent;
        color: inherit;
    }

    .nav-links img {
        width: 24px;
        height: 24px;
        margin: 0;
        padding: 0;
    }

    .nav-links span {
        font-size: 10px;
    }

    .user-profile {
        width: 40px;
        height: 40px;
    }

    header {
        display: flex;
        align-items: center;
        width: 100%;
    }

    .header-logo-mobile {
        width: 32px;
        height: 40px;
    }

    .header-logo-div-mobile {
        display: flex;
        align-items: center;
    }

    .user-profile-font {
        font-weight: 600;
        font-size: 14px;
    }

    .user-profile-menu {
        right: 50px;
    }
}

